@@ -25,6 +25,6 @@
 List *Find_Directories (const char *repository, const char *update_dir,
 			int which, List *entries);
 List *Find_Names (const char *repository, const char *update_dir,
-		  int which, int aflag, List **optentries);
+		  int which, int aflag, List *entries);
 
 #endif /* !defined FIND_NAMES_H */
